# GeoCleanr

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: GeoCleanr_demo.ipynb  GeoCleanr_quickstart.md
src/geocleanr/: __init__.py  cli.py  fixer.py  reporter.py  validator.py  visualizer.py
src/geocleanr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_end_to_end.py  test_fixer.py  test_validator.py
