[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geocleanr"
version = "0.1.0"
description = "Reference geospatial data cleaning toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GeoCleanr Team" }]
dependencies = [
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "click>=8.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
geocleanr = "geocleanr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["geocleanr"]
